feat(API): modif branch route with db
